# glef.icu

./: README.md  run.sh  runs.txt
gleficu/: pom.xml
gleficu-frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
gleficu-frontend/public/: index.html
gleficu-frontend/src/: App.vue  main.js  routes.js  store.js
gleficu-rules/: .gitignore  .project  pom.xml
grading-service/: Cargo.toml  Rocket.toml
grading-service/src/: main.rs
grading-service/src/funcs/: mod.rs
grading-service/src/routes/: mod.rs
grading-service/src/tools/: mod.rs
movie-service/: go.mod
python-merge/: .gitignore  app.py  notes.txt  script.py
scrape-movie-service/: go.mod  go.sum  server.go
scrape-movie-service/api/: api.go  movies.go  tags.go
scrape-movie-service/downloadPlay/: subtitle.go  torrent.go
scrape-movie-service/models/: db.go  genres.go  movie.go  moviesDb.go  tags.go
scrape-movie-service/repository/: movieRepository.go
scrape-movie-service/routes/: routes.go
scrape-movie-service/service/: getMovieByTitle.go
scrape-movie-service/utils/: utils.go
scrape-movie-service/~/: Desktop
user-movies-service/: go.mod  go.sum  server.go
user-movies-service/api/: api.go  watchlist.go  wishlist.go
user-movies-service/models/: watchlist.go  wishlist.go
user-movies-service/routes/: routes.go
user-service/: .gitignore  go.mod  go.sum  server.go
user-service/api/: api.go  dbInit.go  users.go
user-service/auth/: auth.go
user-service/models/: db.go  roles.go  users.go
user-service/routes/: routes.go
(+163 files in other folders)
