[package]
name = "grading-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.3"
serde = "1.0.138"
serde_derive = "1.0.138"
serde_json = "1.0.82"
chrono = "0.4"
rocket = { version = "0.5.0-rc.2", features = ["json"] }